# voice-bot

./: .gitignore  create_proto.sh  docker-compose.yml
api/: Dockerfile  go.mod  main.go
f5_server/: Dockerfile  f5_tts_server.py
llama_server/: CMakeLists.txt  Dockerfile  llama_server.cpp
mic-client/: go.mod  go.sum  main.go  mic-client  test.py
mic-client/proto/: voice.pb.go  voice.proto  voice_grpc.pb.go  whisper.pb.go  whisper_grpc.pb.go
piper_server/: CMakeLists.txt  Dockerfile  piper_server.cpp
proto/: llama.proto  voice.proto  whisper.proto
whisper/: CMakeLists.txt  Dockerfile  whisper_server.cpp  whisper_server.h
